2011-03-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Fix conditionals so that they are
	evaluated as intended.

2011-03-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Removed last bashism from
	openvas-nvt-sync a second time: Drop SIG prefix when referring to
	signal as it is a bashism as well.

2011-03-04  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Ensure that a "gnupg" directory is created in the
	OpenVAS configuration directory with the correct permissions as a
	preparation for signature verifications.

2011-03-02  Michael Wiegand <michael.wiegand@greenbone.net>

	Enable the generation of code documentation. Spotted by Michael Meyer.

	* doc/CMakeLists.txt: New. Add to enable the generation of code
	documentation.

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Fix value of INPUT to match
	the current paths.

2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set to version to 3.2.3.

2011-02-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.2.2 release.

	* CHANGES: Updated.

2011-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Log feed name, version and NVT count
	before and after each sync.

2011-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Remove last bashism from
	openvas-nvt-sync: Refer to signals by name, not by number.

2011-02-17  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/preferences.h: Remove unimplemented function declaration for
	preferences_get_delay_between_tests.

2011-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set to version to 3.2.2.

2011-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.2.1 release.

	* CHANGES: Updated.
